# UAV_UGV

./: .gitignore  README.md  doc.txt  ubuntu_sim_ros_melodic.sh
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/lib/my_pkg/: offb_node
catkin_ws/devel/lib/pkgconfig/: my_pkg.pc
catkin_ws/devel/share/my_pkg/cmake/: my_pkgConfig.cmake
catkin_ws/src/my_pkg/: CMakeLists.txt  package.xml
catkin_ws/src/my_pkg/src/: offb_node.cpp
